# kingdee-kb

./: .git_commit_msg.txt  .gitignore  AGENTS.md  BUG-TRACKER.md  CHANGELOG.md  CODE_STANDARDS.md  DEVLOG.md  PLAN.md  README.md  UAT-REPORT.md  batch_approve.py  biome.json  commit_msg.txt  cspell.json  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  sidebar.html  tsconfig.json  vite.config.ts  vitest.config.ts
.antigravitycli/: 6f5018c4-8c7d-4135-a8ad-8467fcf4821d.json
.github/workflows/: build.yml
.planning/: PROJECT.md  REQUIREMENTS-v0.2.md  REQUIREMENTS.md  ROADMAP-v0.2.md  ROADMAP.md  STATE.md  config.json  需求延伸.txt
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY-v0.2.md  SUMMARY.md
.scratch/: find_unused.ps1
OpenSpec/: coding-standards.md
docs/: 2025-05-25-rig-migration.md  ARCHITECTURE.md  SKILL-COMPATIBILITY-DESIGN.md  USER-GUIDE.md
docs/designs/: pandawiki-comparison-research.md  tencent-meeting-closed-loop.md
e2e/: browse.spec.ts  chat.spec.ts  home.spec.ts  import.spec.ts  navigation.spec.ts  risk.spec.ts  search.spec.ts  settings.spec.ts  templates.spec.ts
e2e/mocks/: tauri-mock.ts
public/: sidebar.html  splashscreen.html
scripts/: fix-image-processor.py  fix-tool-policy.py  generate-release-notes.py  rename-installers.py
skills/_shared/: README.md  deliverable-scan.md  signals-writer.md  template-check.md
skills/acceptance-pack/: SKILL.md
skills/blueprint-tools/: SKILL.md
src/: App.css  App.tsx  index.css  main.tsx  temp_chat.tsx  temp_layout.tsx  temp_research.tsx  temp_risk.tsx  temp_spotlight.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: model_specs.json  seed-wiki-pages.sql
src-tauri/resources/prompts/: doc_gen_system_prompt.md  recipe_acceptance.md  recipe_blueprint.md  recipe_go_live.md  recipe_investigation.md  recipe_meeting.md  recipe_pcr.md  recipe_weekly.md  system_prompt.md
src-tauri/src/: app_state.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: agent.rs  core.rs  document.rs  embedding.rs  ingestion.rs  ingestion_queue.rs  kb_compilation.rs  knowledge_graph.rs  llm_provider.rs  media.rs  meeting.rs  mod.rs  outline.rs  product.rs  project.rs  raw_source.rs  research.rs  risk_blueprint.rs  search_llm.rs  skill.rs  template_doc.rs  tencent_meeting.rs  verification.rs  wiki_page.rs
src-tauri/src/services/: .cspell.json  agent_router.rs  agent_timeout.rs  analysis_cache.rs  asr_provider.rs  audio_capture.rs  bm25_service.rs  chinese_postprocess.rs  chunker.rs  context_budget.rs  context_compressor.rs  cost_tracker.rs  deliverable_recipes.rs  desensitize.rs  doc_generator.rs  document_analysis.rs  docx_filler.rs  docx_image_helpers.rs  edition_config.rs  embedding.rs  file_extractor.rs  fix_hybrid.py  hybrid_search.rs  image_processor.rs  ingest_cache.rs  ingestion.rs  ingestion_helpers.rs  ingestion_pipeline.rs  ingestion_queue.rs  knowledge_graph.rs  llm_providers.rs  llm_service.rs  meeting_minutes_service.rs  meeting_store.rs  meeting_sync.rs  memory.rs  metadata.rs  method_snippet.txt  missing_detection.rs  mod.rs  (+58 more)
src-tauri/src/services/agent/: agent_event.rs  agent_timeout.rs  llm_providers.rs  llm_service.rs  memory.rs  mod.rs  model_downloader.rs  model_metadata.rs  prompts.rs  rig_agent.rs  rig_provider.rs  rig_tool.rs  token.rs
src-tauri/src/services/agent/llm_providers/: anthropic.rs  mod.rs  probe.rs  seed.rs  types.rs
src-tauri/src/services/common/: mod.rs  signal_writer.rs  traits.rs
src-tauri/src/services/harness/: agents_log.rs  constraints.rs  entropy.rs  mod.rs  verifier.rs
src-tauri/src/services/knowledge/: analysis_cache.rs  document_analysis.rs  embedding.rs  file_extractor.rs  hybrid_search.rs  ingestion.rs  ingestion_queue.rs  knowledge_graph.rs  mod.rs  rerank.rs  vector_index.rs
src-tauri/src/services/media/: image_processor.rs  meeting_store.rs  mod.rs
src-tauri/src/services/media/image_processor/: image_classify.rs  mod.rs  multimodal_probe.rs  ocr.rs  vision.rs
src-tauri/src/services/project/: metadata.rs  mod.rs  project_store.rs  research_outline.rs  research_session.rs
src-tauri/src/services/risk/: mod.rs  risk_control.rs
src-tauri/src/services/security/: mod.rs
src-tauri/src/services/skill/: mod.rs  skill_loader.rs  skill_manager.rs  skill_trigger.rs  skill_types.rs  template_docx.rs  template_schema.rs
src-tauri/src/services/verification/: citation.rs  consistency.rs  contradiction.rs  mod.rs  pipeline.rs  self_consistency.rs  types.rs  uncertainty.rs
src-tauri/tests/: generate_schemas.rs  persistence.rs  semantic_similarity.rs  spike_embedding.rs  vision_pipeline.rs
src/lib/: app-error.ts  (+20 more)
(+367 files in other folders)
