[package]
name = "kingdee-kb"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kingdee_kb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
dirs = "6"
tauri-plugin-keyring-store = "0.2"
keyring = "3"

# Phase 2: Embedding & Vector Store
fastembed = { version = "5", features = ["ort-download-binaries-native-tls"] }
usearch = { version = "2", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
regex = "1"

# Phase 4: BM25 Full-Text Search
tantivy = "0.22"
jieba-rs = { version = "0.7", features = ["default-dict"] }

# Phase 6: LLM Integration & RAG
reqwest = { version = "0.12", features = ["json", "stream"] }
tiktoken-rs = "0.6"
futures-util = "0.3"

# Phase 9: Template Parsing Engine
walkdir = "2"
zip = "2"
quick-xml = "0.36"
umya-spreadsheet = "2"
serde_yaml = "0.9"

