[package]
name = "kingdee-kb"
version = "0.1.31"
description = "AI-assisted Kingdee ERP implementation knowledge base"
authors = ["KingdeeKB Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kingdee_kb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dev-dependencies]
filetime = "0.2"
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync", "process", "macros"] }
dirs = "6"
tauri-plugin-keyring-store = "0.2"
keyring = "3"

# Phase 2: Embedding & Vector Store
fastembed = { version = "5", default-features = false, features = ["hf-hub-native-tls", "image-models"] }
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "api-24", "alternative-backend"] }
ort-tract = "0.3.0"
usearch = { version = "2", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
regex = "1"

# Phase 4: BM25 Full-Text Search
tantivy = "0.22"
jieba-rs = { version = "0.7", features = ["default-dict"] }

# Phase 6: LLM Integration & RAG
reqwest = { version = "0.12", features = ["json", "stream"] }
ureq = "3"
tiktoken-rs = "0.6"
futures-util = "0.3"
bytes = "1"

# Phase 9: Template Parsing Engine
walkdir = "2"
zip = "2"
quick-xml = "0.36"
umya-spreadsheet = "2"
serde_yaml = "0.9"
pdf-extract = "0.7"
calamine = "0.26"
image = "0.25"
cfb = "0.10"

# Phase 12: Whisper Voice Recognition
whisper-rs = { version = "0.16", features = [] }
cpal = "0.15"
hound = "3"

# Phase 12b: Online ASR Providers (Tencent/Xfyun)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
hex = "0.4"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
rand = "0.8"

# Phase 14: Video Transcription (audio extraction from video)
ffmpeg-sidecar = "2"

# Global Shortcut (OS-level Alt+Space)
tauri-plugin-global-shortcut = "2"

# Clipboard file paste: write temporary files from frontend
tauri-plugin-fs = "2"

# ReAct Agent
async-trait = "0.1"

# rig AI framework
rig-core = "0.37"
thiserror = "2"
anyhow = "1"
futures = "0.3.32"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bitflags = "2.11.1"

# ─── 编译优化：降低 debug 构建内存占用 ───
# fastembed + ort 在 Windows debug 模式下 LLVM 代码生成易 OOM
[profile.dev]
opt-level = 0       # 无优化
debug = 1           # 仅行号表（非完整调试信息），大幅减少内存
codegen-units = 16   # 更多并行编译单元，降低单文件峰值内存
lto = false          # 禁用链接时优化
incremental = true   # 增量编译（默认开启）
